[gd_scene load_steps=6 format=3 uid="uid://dubipt05fnvrb"]

[ext_resource type="Script" uid="uid://x53x4t37r72b" path="res://scripts/vending_machine.gd" id="1_f82dn"]
[ext_resource type="PackedScene" uid="uid://bh8rdpd1cn0hg" path="res://scenes/vending_machine_item.tscn" id="2_pxr7o"]
[ext_resource type="Script" uid="uid://cfbf2y1ojnxdy" path="res://scripts/vending_machine_button.gd" id="4_um5cl"]
[ext_resource type="PackedScene" uid="uid://diaq3aqps8814" path="res://scenes/money_indicator.tscn" id="5_q0fei"]
[ext_resource type="Texture2D" uid="uid://bd6yeeyoeuwoq" path="res://assets/vending_machine.jpg" id="6_pxr7o"]

[node name="VendingMachine" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_f82dn")
vending_machine_item_scene = ExtResource("2_pxr7o")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_mode = 0
offset_left = 363.0
offset_right = 863.0
offset_bottom = 789.0

[node name="VendingMachine" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("6_pxr7o")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 2.2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 35

[node name="ItemDisplay" type="GridContainer" parent="PanelContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
size_flags_stretch_ratio = 2.2
theme_override_constants/h_separation = 45
theme_override_constants/v_separation = 30
columns = 3

[node name="VendingMachineItem" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem2" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem3" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem4" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem5" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem6" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem7" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem8" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem9" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem10" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem11" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem12" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VendingMachineItem13" parent="PanelContainer/HBoxContainer/MarginContainer/ItemDisplay" instance=ExtResource("2_pxr7o")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.85

[node name="NumberPad" type="GridContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
columns = 3

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "A"
script = ExtResource("4_um5cl")

[node name="Button2" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "1"
script = ExtResource("4_um5cl")

[node name="Button3" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "2"
script = ExtResource("4_um5cl")

[node name="Button4" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "B"
script = ExtResource("4_um5cl")

[node name="Button5" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "3"
script = ExtResource("4_um5cl")

[node name="Button6" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "4"
script = ExtResource("4_um5cl")

[node name="Button7" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "C"
script = ExtResource("4_um5cl")

[node name="Button8" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "5"
script = ExtResource("4_um5cl")

[node name="Button9" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "6"
script = ExtResource("4_um5cl")

[node name="Button10" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "D"
script = ExtResource("4_um5cl")

[node name="Button11" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "7"
script = ExtResource("4_um5cl")

[node name="Button12" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "8"
script = ExtResource("4_um5cl")

[node name="Button13" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "E"
script = ExtResource("4_um5cl")

[node name="Button14" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
custom_minimum_size = Vector2(35, 25)
layout_mode = 2
text = "9"
script = ExtResource("4_um5cl")

[node name="Reset" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/NumberPad"]
unique_name_in_owner = true
layout_mode = 2
text = "<<"

[node name="Purchase" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase"

[node name="MoneyIndicator" parent="PanelContainer/HBoxContainer/VBoxContainer" instance=ExtResource("5_q0fei")]
layout_mode = 2
